--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -6,9 +6,22 @@
 </head>
 <body>
     <h1>{{ post.title }}</h1>
-    <p>{{ post.content }}</p>
-    <p><strong>Category:</strong> {{ post.category }}</p>
-    <p><strong>Tags:</strong> {{ post.tags }}</p>
+
+
+    <div>
+        {% if post.image %}
+            <img src="{{ post.image.url }}" alt="Post Image" style="max-width: 100%; height: auto;">
+        {% endif %}
+        <p>{{ post.content }}</p>
+    </div>
+
+
+    <div>
+        <p><strong>Category:</strong> {{ post.category }}</p>
+        <p><strong>Tags:</strong> {{ post.tags }}</p>
+    </div>
+
+
     <p><strong>Views:</strong> {{ post.views }}</p>
 
     <h2>Comments</h2>
@@ -18,15 +31,22 @@
         {% endfor %}
     </ul>
 
+
     <h3>Leave a Comment</h3>
-    <form method="POST">
-        {% csrf_token %}
-        <label for="author">Your Name:</label>
-        <input type="text" id="author" name="author" required><br>
-        <label for="text">Comment:</label>
-        <textarea id="text" name="text" required></textarea><br>
-        <button type="submit">Submit</button>
-    </form>
+    {% if user.is_authenticated %}
+        <form method="POST">
+            {% csrf_token %}
+            <label for="author">Your Name:</label>
+            <input type="text" id="author" name="author" required><br>
+            <label for="text">Comment:</label>
+            <textarea id="text" name="text" required></textarea><br>
+            <button type="submit">Submit</button>
+        </form>
+    {% else %}
+        <p>You must be <a href="{% url 'login' %}">logged in</a> to leave a comment.</p>
+    {% endif %}
+
+    <!-- Recommended Posts -->
     <h3>Recommended Posts</h3>
     <ul>
         {% for recommended_post in recommended_posts %}
