--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -37,7 +37,7 @@
             <div class="flex items-center">
                 <input id="remember_me" name="remember_me" type="checkbox" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
                 <label for="remember_me" class="ml-2 block text-sm text-gray-900">
-                    Meni eslab qol
+                    Meni eslab qol <br>
                 </label>
             </div>
 
