--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -42,8 +42,9 @@
             </div>
 
             <div class="text-sm">
-                <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
-                    Parolni unutdingizmi? </a>
+                <a href="{% url 'password_change' %}" class="font-medium text-indigo-600 hover:text-indigo-500">
+                    Parolni o'zgartirish
+                </a>
             </div>
         </div>
 
@@ -58,4 +59,3 @@
     </p>
 </div>
 {% endblock %}
-
